# UV-Ruff-

./: .coverage  .gitignore  README.md  pyproject.toml
src/ruffyt/: __init__.py  app.py
src/tests/: test_app.py
